# learning-tilemaps

./: .gitignore  README.md  camera.py  main.py  map_object.py  parameters.py  player.py  positional_object.py  pyproject.toml  requirements.txt  resources.py  sourceme  util.py
game/: camera.py  char_air.py  char_fire.py  char_green.py  character.py  effect.py  hud.py  map.py  map_object.py  npc.py  overlays.py  player.py  positional_object.py  resources.py  util.py  window.py
gimp/: black.xcf  blue.xcf  green.xcf  player.xcf  red.xcf  sand.xcf  stone.xcf  tree.xcf
